test/corpus/leaf_variables.txt
================================================================================
Multiple Leaf variables
================================================================================

<div>Welcome #(user.firstName) #(user.lastName)</div>

--------------------------------------------------------------------------------

(template
  (html_element
    (start_tag
      (tag_name))
    (html_content
      (text)
      (leaf_variable
        (expression
          (postfix_expression
            (member_expression
              (postfix_expression
                (primary_expression
                  (identifier)))
              (identifier)))))
      (leaf_variable
        (expression
          (postfix_expression
            (member_expression
              (postfix_expression
                (primary_expression
                  (identifier)))
              (identifier))))))
    (end_tag
      (tag_name))))